# photocomm

./: CMakeLists.txt
arduino/driver/: driver.ino
include/: receiver.h  reciever.h  shared.h  transmitter.h
src/: main.c  receiver.c  shared.c  transmitter.c
